Set CurrentPresence to Unset if online without SimplePresence

The spec says:

    If the connection is online but does not support the SimplePresence
    interface, this should be (Connection_Presence_Type_Unset, "", "").

But previously we only updated CurrentPresence in response to
PresencesChanged being emitted for our self handle, which it obviously
never is by connections which don't implement SimplePresence.

(Actually, this was right by accident until my previous commit, because
CurrentPresence was initialized to (0, NULL, NULL).)

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=24779>